Import translations. DO NOT MERGE
Change-Id: Ib34382554d9eb44227dd2eaa3f28a8b5497abbe6
Auto-generated-cl: translation import

--- a/res/values-ta/strings.xml
+++ b/res/values-ta/strings.xml
@@ -190,7 +190,7 @@
     <string name="effect_background" msgid="1358432220077975015">"பின்புலம்"</string>
     <string name="accessibility_shutter_button" msgid="6040483605347230438">"ஷட்டர்"</string>
     <string name="accessibility_cancel_button" msgid="5679989494636116448">"ரத்துசெய்"</string>
-    <string name="accessibility_menu_button" msgid="7692103503958544723">"மெனு பொத்தான்"</string>
+    <string name="accessibility_menu_button" msgid="7692103503958544723">"மெனு பட்டன்"</string>
     <string name="accessibility_check_box" msgid="1084094675439953723">"%1$s செக் பாக்ஸ்"</string>
     <string name="accessibility_switch_to_camera" msgid="4518394037216725274">"படத்திற்கு மாறு"</string>
     <string name="accessibility_switch_to_video" msgid="8174781871592793967">"வீடியோவிற்கு மாறு"</string>
@@ -339,7 +339,7 @@
     <string name="exposure_compensation_desc_0" msgid="2820273752287040523">"எக்ஸ்போஷரைச் சரிசெய்தல் 0"</string>
     <string name="exposure_compensation_desc_p1" msgid="2328275401634452554">"எக்ஸ்போஷரைச் சரிசெய்தல் +1"</string>
     <string name="exposure_compensation_desc_p2" msgid="4555277824096107142">"எக்ஸ்போஷரைச் சரிசெய்தல் +2"</string>
-    <string name="button_change_announcement" msgid="3759686152778772111">"பொத்தான் இப்போது %s இல் உள்ளது"</string>
+    <string name="button_change_announcement" msgid="3759686152778772111">"பட்டன் இப்போது %s இல் உள்ளது"</string>
     <string name="setting_location" msgid="4459859689227893838">"இருப்பிடம்"</string>
     <string name="setting_back_camera_photo" msgid="256738900473265017">"பின்புற கேமரா படம்"</string>
     <string name="setting_back_camera_video" msgid="5220819479408164689">"பின்புற கேமரா வீடியோ"</string>
