--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -279,7 +279,7 @@
     <string name="remember_location_prompt" msgid="3006013504489919474">"अपनी फ़ोटो और वीडियो उन स्‍थानों के साथ टैग करें जहां वे लिए गए हैं."</string>
     <string name="remember_location_no" msgid="4412802756840226925">"नहीं,रहने दें"</string>
     <string name="remember_location_yes" msgid="4339424460683531388">"हां"</string>
-    <string name="camera_menu_more_label" msgid="7951917844735828365">"अधिक विकल्प"</string>
+    <string name="camera_menu_more_label" msgid="7951917844735828365">"ज़्यादा विकल्प"</string>
     <string name="camera_menu_settings_label" msgid="3862756725328016822">"सेटिंग"</string>
     <string name="create_tiny_planet" msgid="5186918191372107343">"छोटा ग्रह बनाएं"</string>
     <string name="saving_tiny_planet" msgid="8828265180177375494">"छोटा ग्रह सहेजा जा रहा है …"</string>
@@ -324,7 +324,7 @@
     <string name="countdown_timer_off" msgid="1663008439564495948">"काउंटडाउन टाइमर बंद है"</string>
     <string name="countdown_timer_duration_3s" msgid="7435393834886072664">"काउंटडाउन टाइमर अवधि 3 सेकंड पर सेट है"</string>
     <string name="countdown_timer_duration_10s" msgid="9085308782250002795">"काउंटडाउन टाइमर अवधि 10 सेकंड पर सेट है"</string>
-    <string name="more_options_desc" msgid="4628738800610478353">"अधिक विकल्प"</string>
+    <string name="more_options_desc" msgid="4628738800610478353">"ज़्यादा विकल्प"</string>
     <string name="cancel_button_description" msgid="3801167024006905033">"अभी नहीं"</string>
     <string name="done_button_description" msgid="1334963435441544592">"पूर्ण"</string>
     <string name="retake_button_description" msgid="4234613030674787714">"फिर से लें"</string>
