Import translations. DO NOT MERGE
Change-Id: I759543bb5fe5e4617dba6787f2f618c96a0bcbbe
Auto-generated-cl: translation import

--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -101,7 +101,7 @@
     <string name="pref_camera_focusmode_entry_auto" msgid="8977409813328199501">"अपने आप"</string>
     <string name="pref_camera_focusmode_entry_infinity" msgid="3887667853236656322">"अनंत"</string>
     <string name="pref_camera_focusmode_entry_macro" msgid="7632276686726851426">"मैक्रो"</string>
-    <string name="pref_camera_focusmode_label_auto" msgid="4884418453600317694">"स्वत:"</string>
+    <string name="pref_camera_focusmode_label_auto" msgid="4884418453600317694">"अपने-आप"</string>
     <string name="pref_camera_focusmode_label_infinity" msgid="1673352016120343314">"अनंत"</string>
     <string name="pref_camera_focusmode_label_macro" msgid="5065639298027996399">"मैक्रो"</string>
     <string name="pref_camera_flashmode_title" msgid="8363803841022314574">"फ़्लैश मोड"</string>
@@ -119,7 +119,7 @@
     <string name="pref_camera_whitebalance_entry_daylight" msgid="757833578153467254">"दिन का प्रकाश"</string>
     <string name="pref_camera_whitebalance_entry_fluorescent" msgid="5157027611220790970">"फ़्लोरेसेंट"</string>
     <string name="pref_camera_whitebalance_entry_cloudy" msgid="3569589102226796875">"धुंधला"</string>
-    <string name="pref_camera_whitebalance_label_auto" msgid="4305837287360485369">"स्वत:"</string>
+    <string name="pref_camera_whitebalance_label_auto" msgid="4305837287360485369">"अपने-आप"</string>
     <string name="pref_camera_whitebalance_label_incandescent" msgid="2860805668879945185">"अत्यधिक चमकीला"</string>
     <string name="pref_camera_whitebalance_label_daylight" msgid="4562002095198912409">"दिन का प्रकाश"</string>
     <string name="pref_camera_whitebalance_label_fluorescent" msgid="10552295745391742">"फ़्लोरेसेंट"</string>
@@ -313,7 +313,7 @@
     <string name="flash_auto_desc" msgid="3009043125539675717">"फ़्लैश ऑटो"</string>
     <string name="flash_on_desc" msgid="930372145324854699">"फ़्लैश चालू"</string>
     <string name="hdr_plus_flash_off_desc" msgid="5335888906983788789">"HDR+ फ़्लैश बंद"</string>
-    <string name="hdr_plus_flash_auto_desc" msgid="4812200236263011537">"HDR+ फ़्लैश स्वत:"</string>
+    <string name="hdr_plus_flash_auto_desc" msgid="4812200236263011537">"HDR+ फ़्लैशअपने-आप"</string>
     <string name="hdr_plus_flash_on_desc" msgid="8323389161987561284">"HDR+ फ़्लैश चालू"</string>
     <string name="torch_on_desc" msgid="3069836196559213365">"टॉर्च चालू"</string>
     <string name="torch_off_desc" msgid="8304675202998742618">"टॉर्च बंद"</string>
