--- a/res/values-ta/strings.xml
+++ b/res/values-ta/strings.xml
@@ -75,7 +75,7 @@
     <string name="preparing_sd" product="default" msgid="7435693655017362767">"SD கார்டைத் தயார் செய்கிறது..."</string>
     <string name="access_sd_fail" product="default" msgid="2634861611082499811">"SD கார்டை அணுக முடியவில்லை."</string>
     <string name="time_lapse_title" msgid="3267978566401228497">"இடைவெளிக்கான நேரம் பதிவாகிறது"</string>
-    <string name="feedback_description_camera_access" msgid="419090951070170132">"பயன்பாட்டை கேமராவுடன் இணைக்க முடியவில்லை"</string>
+    <string name="feedback_description_camera_access" msgid="419090951070170132">"ஆப்ஸை கேமராவுடன் இணைக்க முடியவில்லை"</string>
     <string name="feedback_description_save_photo" msgid="8658767358989083228">"சாதனத்தில் படம் அல்லது வீடியோ சேமிக்கப்படவில்லை."</string>
     <string name="capturing" msgid="5255164204641920893">"படமெடுக்கிறது"</string>
     <string name="pref_camera_id_title" msgid="4680648115225411185">"கேமராவைத் தேர்வுசெய்க"</string>
