Import translations. DO NOT MERGE
Change-Id: I24e31a85c17007db89acabc324d1d72a94ce30b7
Auto-generated-cl: translation import

--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -348,7 +348,7 @@
     <string name="setting_default_camera" msgid="6954076799301004779">"डीफॉल्ट कॅमेरा"</string>
     <string name="setting_google_help_and_feedback" msgid="2079580537079242775">"मदत आणि अभिप्राय"</string>
     <string name="processing_hdr_plus" msgid="9160093263037540304">"HDR+ प्रक्रिया करत आहे …"</string>
-    <string name="open_source_licenses" msgid="2169711954264883060">"मुक्त स्त्रोत परवाने"</string>
+    <string name="open_source_licenses" msgid="2169711954264883060">"मुक्त स्रोत परवाने"</string>
     <string name="pref_category_general" msgid="6737748849700581019">"सामान्य सेटिंग्ज"</string>
     <string name="pref_category_resolution_quality" msgid="6641462402321962896">"रिझोल्‍यूशन आणि गुणवत्ता"</string>
     <string name="pref_category_about" msgid="1966255405679342337">"विषयी"</string>
