Import translations. DO NOT MERGE
Auto-generated-cl: translation import

Bug: 64712476
Change-Id: If95a4ccf9aee9f10aae2c9e06b934cfcce72cff6

--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -58,7 +58,7 @@
     <string name="iso" msgid="8578773821062054902">"ISO"</string>
     <string name="unit_mm" msgid="5210344300697638286">"मिमी"</string>
     <string name="manual" msgid="2444400953521760140">"विवरण पुस्तिका"</string>
-    <string name="auto" msgid="2552649885114400474">"स्वतः"</string>
+    <string name="auto" msgid="2552649885114400474">"अपने आप"</string>
     <string name="flash_on" msgid="6573457197393807642">"फ़्लैश चलाया गया"</string>
     <string name="flash_off" msgid="7889323512830926273">"कोई फ़्लैश नहीं"</string>
     <string name="unknown" msgid="564184550182858146">"अज्ञात"</string>
@@ -98,15 +98,15 @@
     <string name="pref_camera_picturesize_entry_medium" msgid="7708839551627003154">"मध्यम"</string>
     <string name="pref_camera_picturesize_entry_small" msgid="2991239656622539068">"छोटा"</string>
     <string name="pref_camera_focusmode_title" msgid="3637702747984180030">"फ़ोकस मोड"</string>
-    <string name="pref_camera_focusmode_entry_auto" msgid="8977409813328199501">"स्वतः"</string>
+    <string name="pref_camera_focusmode_entry_auto" msgid="8977409813328199501">"अपने आप"</string>
     <string name="pref_camera_focusmode_entry_infinity" msgid="3887667853236656322">"अनंत"</string>
     <string name="pref_camera_focusmode_entry_macro" msgid="7632276686726851426">"मैक्रो"</string>
-    <string name="pref_camera_focusmode_label_auto" msgid="4884418453600317694">"स्वत:"</string>
+    <string name="pref_camera_focusmode_label_auto" msgid="4884418453600317694">"अपने-आप"</string>
     <string name="pref_camera_focusmode_label_infinity" msgid="1673352016120343314">"अनंत"</string>
     <string name="pref_camera_focusmode_label_macro" msgid="5065639298027996399">"मैक्रो"</string>
     <string name="pref_camera_flashmode_title" msgid="8363803841022314574">"फ़्लैश मोड"</string>
     <string name="pref_camera_flashmode_label" msgid="5852483713534762800">"फ़्लैश मोड"</string>
-    <string name="pref_camera_flashmode_entry_auto" msgid="4211992591841657014">"स्वतः"</string>
+    <string name="pref_camera_flashmode_entry_auto" msgid="4211992591841657014">"अपने आप"</string>
     <string name="pref_camera_flashmode_entry_on" msgid="3519831202665377698">"चालू"</string>
     <string name="pref_camera_flashmode_entry_off" msgid="8861322265566617357">"बंद"</string>
     <string name="pref_camera_flashmode_label_auto" msgid="2309144918900450379">"फ़्लैश अपनेआप:"</string>
@@ -114,18 +114,18 @@
     <string name="pref_camera_flashmode_label_off" msgid="7175863901446001441">"फ़्लैश बंद"</string>
     <string name="pref_camera_whitebalance_title" msgid="7962809566612868179">"श्वेत संतुलन"</string>
     <string name="pref_camera_whitebalance_label" msgid="7370366644738746700">"श्वेत संतुलन"</string>
-    <string name="pref_camera_whitebalance_entry_auto" msgid="1390631794449502796">"स्वतः"</string>
+    <string name="pref_camera_whitebalance_entry_auto" msgid="1390631794449502796">"अपने आप"</string>
     <string name="pref_camera_whitebalance_entry_incandescent" msgid="1140391575294372706">"अत्यधिक चमकीला"</string>
     <string name="pref_camera_whitebalance_entry_daylight" msgid="757833578153467254">"दिन का प्रकाश"</string>
     <string name="pref_camera_whitebalance_entry_fluorescent" msgid="5157027611220790970">"फ़्लोरेसेंट"</string>
     <string name="pref_camera_whitebalance_entry_cloudy" msgid="3569589102226796875">"धुंधला"</string>
-    <string name="pref_camera_whitebalance_label_auto" msgid="4305837287360485369">"स्वत:"</string>
+    <string name="pref_camera_whitebalance_label_auto" msgid="4305837287360485369">"अपने-आप"</string>
     <string name="pref_camera_whitebalance_label_incandescent" msgid="2860805668879945185">"अत्यधिक चमकीला"</string>
     <string name="pref_camera_whitebalance_label_daylight" msgid="4562002095198912409">"दिन का प्रकाश"</string>
     <string name="pref_camera_whitebalance_label_fluorescent" msgid="10552295745391742">"फ़्लोरेसेंट"</string>
     <string name="pref_camera_whitebalance_label_cloudy" msgid="4880793739075193336">"धुंधला"</string>
     <string name="pref_camera_scenemode_title" msgid="5709932164781367066">"दृश्य मोड"</string>
-    <string name="pref_camera_scenemode_entry_auto" msgid="9205644316260850379">"स्वतः"</string>
+    <string name="pref_camera_scenemode_entry_auto" msgid="9205644316260850379">"अपने आप"</string>
     <string name="pref_camera_scenemode_entry_hdr_plus" msgid="6759085555519758794">"HDR+"</string>
     <string name="pref_camera_scenemode_entry_hdr" msgid="3098836808080630955">"HDR"</string>
     <string name="pref_camera_scenemode_entry_turn_hdr_plus_on" msgid="1096746750342289067">"HDR+ चालू"</string>
@@ -279,7 +279,7 @@
     <string name="remember_location_prompt" msgid="3006013504489919474">"अपनी फ़ोटो और वीडियो उन स्‍थानों के साथ टैग करें जहां वे लिए गए हैं."</string>
     <string name="remember_location_no" msgid="4412802756840226925">"नहीं,रहने दें"</string>
     <string name="remember_location_yes" msgid="4339424460683531388">"हां"</string>
-    <string name="camera_menu_more_label" msgid="7951917844735828365">"अधिक विकल्प"</string>
+    <string name="camera_menu_more_label" msgid="7951917844735828365">"ज़्यादा विकल्प"</string>
     <string name="camera_menu_settings_label" msgid="3862756725328016822">"सेटिंग"</string>
     <string name="create_tiny_planet" msgid="5186918191372107343">"छोटा ग्रह बनाएं"</string>
     <string name="saving_tiny_planet" msgid="8828265180177375494">"छोटा ग्रह सहेजा जा रहा है …"</string>
@@ -313,7 +313,7 @@
     <string name="flash_auto_desc" msgid="3009043125539675717">"फ़्लैश ऑटो"</string>
     <string name="flash_on_desc" msgid="930372145324854699">"फ़्लैश चालू"</string>
     <string name="hdr_plus_flash_off_desc" msgid="5335888906983788789">"HDR+ फ़्लैश बंद"</string>
-    <string name="hdr_plus_flash_auto_desc" msgid="4812200236263011537">"HDR+ फ़्लैश स्वत:"</string>
+    <string name="hdr_plus_flash_auto_desc" msgid="4812200236263011537">"HDR+ फ़्लैशअपने-आप"</string>
     <string name="hdr_plus_flash_on_desc" msgid="8323389161987561284">"HDR+ फ़्लैश चालू"</string>
     <string name="torch_on_desc" msgid="3069836196559213365">"टॉर्च चालू"</string>
     <string name="torch_off_desc" msgid="8304675202998742618">"टॉर्च बंद"</string>
@@ -324,7 +324,7 @@
     <string name="countdown_timer_off" msgid="1663008439564495948">"काउंटडाउन टाइमर बंद है"</string>
     <string name="countdown_timer_duration_3s" msgid="7435393834886072664">"काउंटडाउन टाइमर अवधि 3 सेकंड पर सेट है"</string>
     <string name="countdown_timer_duration_10s" msgid="9085308782250002795">"काउंटडाउन टाइमर अवधि 10 सेकंड पर सेट है"</string>
-    <string name="more_options_desc" msgid="4628738800610478353">"अधिक विकल्प"</string>
+    <string name="more_options_desc" msgid="4628738800610478353">"ज़्यादा विकल्प"</string>
     <string name="cancel_button_description" msgid="3801167024006905033">"अभी नहीं"</string>
     <string name="done_button_description" msgid="1334963435441544592">"पूर्ण"</string>
     <string name="retake_button_description" msgid="4234613030674787714">"फिर से लें"</string>
