--- a/res/values-b+sr+Latn/strings.xml
+++ b/res/values-b+sr+Latn/strings.xml
@@ -188,7 +188,7 @@
     <string name="clear_effects" msgid="6192797848995967992">"Obriši efekte"</string>
     <string name="effect_silly_faces" msgid="7952713419757286453">"SMEŠNA LICA"</string>
     <string name="effect_background" msgid="1358432220077975015">"POZADINA"</string>
-    <string name="accessibility_shutter_button" msgid="6040483605347230438">"Zatvarač"</string>
+    <string name="accessibility_shutter_button" msgid="6040483605347230438">"Okidač"</string>
     <string name="accessibility_cancel_button" msgid="5679989494636116448">"Otkaži"</string>
     <string name="accessibility_menu_button" msgid="7692103503958544723">"Dugme menija"</string>
     <string name="accessibility_check_box" msgid="1084094675439953723">"Polje za potvrdu %1$s"</string>
