Import translations. DO NOT MERGE
Change-Id: I33620e71e32d15b25c8fc3f8a7ceee92f76ef5c4
Auto-generated-cl: translation import

--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -195,7 +195,7 @@
     <string name="accessibility_switch_to_camera" msgid="4518394037216725274">"Alternar para foto"</string>
     <string name="accessibility_switch_to_video" msgid="8174781871592793967">"Alternar para vídeo"</string>
     <string name="accessibility_switch_to_panorama" msgid="8322228859117808037">"Alternar para panorama"</string>
-    <string name="accessibility_switch_to_photo_sphere" msgid="5803217570370854725">"Alternar para photo sphere"</string>
+    <string name="accessibility_switch_to_photo_sphere" msgid="5803217570370854725">"Alternar para foto esférica"</string>
     <string name="accessibility_switch_to_gcam" msgid="7562625440767034695">"Alternar para alta qualidade"</string>
     <string name="accessibility_switch_to_refocus" msgid="6796169367953860106">"Alternar para Mudar foco"</string>
     <string name="accessibility_review_cancel" msgid="5462850829869569629">"Cancelar"</string>
@@ -300,7 +300,7 @@
     <string name="mode_refocus" msgid="172192967119469061">"Efeito foco"</string>
     <string name="mode_camera_desc" msgid="3670807361165657278">"Alternar para o modo de câmera"</string>
     <string name="mode_video_desc" msgid="4058407412929464689">"Alternar para a câmera de vídeo"</string>
-    <string name="mode_photosphere_desc" msgid="2403816283825579161">"Alternar para o modo photo sphere"</string>
+    <string name="mode_photosphere_desc" msgid="2403816283825579161">"Alternar para o modo foto esférica"</string>
     <string name="mode_panorama_desc" msgid="6023020404237519590">"Alterar para o modo de panorama"</string>
     <string name="mode_refocus_desc" msgid="6171183297515508465">"Alternar para o modo Efeito foco"</string>
     <string name="settings_open_desc" msgid="6914471293841793766">"Abrir configurações"</string>
