--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -124,7 +124,7 @@
     <string name="pref_camera_whitebalance_label_daylight" msgid="4562002095198912409">"LUCE DIURNA"</string>
     <string name="pref_camera_whitebalance_label_fluorescent" msgid="10552295745391742">"LUCE NEON"</string>
     <string name="pref_camera_whitebalance_label_cloudy" msgid="4880793739075193336">"NUVOLOSO"</string>
-    <string name="pref_camera_scenemode_title" msgid="5709932164781367066">"Modalità scena"</string>
+    <string name="pref_camera_scenemode_title" msgid="5709932164781367066">"Modalità Scena"</string>
     <string name="pref_camera_scenemode_entry_auto" msgid="9205644316260850379">"Automatica"</string>
     <string name="pref_camera_scenemode_entry_hdr_plus" msgid="6759085555519758794">"HDR+"</string>
     <string name="pref_camera_scenemode_entry_hdr" msgid="3098836808080630955">"HDR"</string>
@@ -146,7 +146,7 @@
     <string name="pref_camera_countdown_label_three" msgid="3154170918067103541">"3 SECONDI"</string>
     <string name="pref_camera_countdown_label_ten" msgid="4372650985906500604">"10 SECONDI"</string>
     <string name="pref_camera_countdown_label_fifteen" msgid="8469955900530268867">"15 SECONDI"</string>
-    <string name="not_selectable_in_scene_mode" msgid="3260801086980522611">"Non selezionabile in modalità scena."</string>
+    <string name="not_selectable_in_scene_mode" msgid="3260801086980522611">"Non selezionabile in modalità Scena."</string>
     <string name="pref_exposure_title" msgid="7525751789152582800">"Esposizione"</string>
     <string name="pref_exposure_label" msgid="2604738602400261218">"ESPOSIZIONE"</string>
     <!-- no translation found for pref_camera_hdr_default (5054955236904902318) -->
