--- a/res/values-bs/strings.xml
+++ b/res/values-bs/strings.xml
@@ -297,12 +297,12 @@
     <string name="mode_timelapse" msgid="1517168724627815453">"Protok vremena"</string>
     <string name="mode_wideangle" msgid="1099640345041696830">"Široki ugao"</string>
     <string name="mode_panorama" msgid="6882648621305828861">"Panoramski način rada"</string>
-    <string name="mode_refocus" msgid="172192967119469061">"Efekt s izoštr. objektom"</string>
+    <string name="mode_refocus" msgid="172192967119469061">"Efekat s izoštr. objektom"</string>
     <string name="mode_camera_desc" msgid="3670807361165657278">"Prebaci na način rada za kameru"</string>
     <string name="mode_video_desc" msgid="4058407412929464689">"Prebaciti na videokameru"</string>
     <string name="mode_photosphere_desc" msgid="2403816283825579161">"Prebaci na način rada za photo sphere fotografije"</string>
     <string name="mode_panorama_desc" msgid="6023020404237519590">"Prebaci na panoramski način rada"</string>
-    <string name="mode_refocus_desc" msgid="6171183297515508465">"Prebaci na način rada Efekt s izoštrenim objektom"</string>
+    <string name="mode_refocus_desc" msgid="6171183297515508465">"Prebaci na način rada Efekat s izoštrenim objektom"</string>
     <string name="settings_open_desc" msgid="6914471293841793766">"Otvori postavke"</string>
     <string name="settings_close_desc" msgid="3095831199632813127">"Zatvori postavke"</string>
     <string name="hdr_plus_off_desc" msgid="5301287296717144319">"HDR Plus isključen"</string>
