Import translations. DO NOT MERGE
Change-Id: I12d95a62e9fd164224b14b864cd91333527f77a3
Auto-generated-cl: translation import

--- a/res/values-bs/strings.xml
+++ b/res/values-bs/strings.xml
@@ -161,7 +161,7 @@
     <string name="dialog_report" msgid="7616428760369876209">"Prijavi"</string>
     <string name="dialog_dismiss" msgid="1382550604990470119">"Odbaci"</string>
     <string name="spaceIsLow_content" product="default" msgid="4522771065344332702">"Vaša SD kartica je skoro puna. Promijenite postavku kvaliteta ili izbrišite nekoliko slika ili drugih fajlova."</string>
-    <string name="video_reach_size_limit" msgid="9196836111505731836">"Dostignut limit za veličinu videozapisa."</string>
+    <string name="video_reach_size_limit" msgid="9196836111505731836">"Dostignuto je ograničenje veličine."</string>
     <string name="pano_too_fast_prompt" msgid="2503148095578052177">"Prebrzo kretanje"</string>
     <string name="pano_dialog_prepare_preview" msgid="4445235163599534263">"Pripremanje panorame"</string>
     <string name="pano_dialog_panorama_failed" msgid="6772546547048693619">"Panorama nije mogla biti sačuvana."</string>
