--- a/res/values-bs/strings.xml
+++ b/res/values-bs/strings.xml
@@ -161,7 +161,7 @@
     <string name="dialog_report" msgid="7616428760369876209">"Prijavi"</string>
     <string name="dialog_dismiss" msgid="1382550604990470119">"Odbaci"</string>
     <string name="spaceIsLow_content" product="default" msgid="4522771065344332702">"Vaša SD kartica je skoro puna. Promijenite postavku kvaliteta ili izbrišite nekoliko slika ili drugih fajlova."</string>
-    <string name="video_reach_size_limit" msgid="9196836111505731836">"Dostignut limit za veličinu videozapisa."</string>
+    <string name="video_reach_size_limit" msgid="9196836111505731836">"Dostignuto je ograničenje veličine."</string>
     <string name="pano_too_fast_prompt" msgid="2503148095578052177">"Prebrzo kretanje"</string>
     <string name="pano_dialog_prepare_preview" msgid="4445235163599534263">"Pripremanje panorame"</string>
     <string name="pano_dialog_panorama_failed" msgid="6772546547048693619">"Panorama nije mogla biti sačuvana."</string>
@@ -270,7 +270,7 @@
     <string name="time_lapse_seconds" msgid="7319683099532506270">"Broj sekundi:"</string>
     <string name="time_lapse_minutes" msgid="5325447383033224679">"Broj minuta:"</string>
     <string name="time_lapse_hours" msgid="5294001144133261436">"Broj sati:"</string>
-    <string name="time_lapse_interval_set" msgid="2418594453248958440">"Završeno"</string>
+    <string name="time_lapse_interval_set" msgid="2418594453248958440">"Gotovo"</string>
     <string name="set_time_interval" msgid="2531393962847535331">"Postaviti vremenski interval"</string>
     <string name="set_time_interval_help" msgid="64145154088021389">"Funkcija protoka vremena je isključena. Uključite je kako biste postavili vremenski interval."</string>
     <string name="set_duration" msgid="1638453882581604341">"Postaviti tajmer u sekundama"</string>
@@ -297,12 +297,12 @@
     <string name="mode_timelapse" msgid="1517168724627815453">"Protok vremena"</string>
     <string name="mode_wideangle" msgid="1099640345041696830">"Široki ugao"</string>
     <string name="mode_panorama" msgid="6882648621305828861">"Panoramski način rada"</string>
-    <string name="mode_refocus" msgid="172192967119469061">"Efekt s izoštr. objektom"</string>
+    <string name="mode_refocus" msgid="172192967119469061">"Efekat s izoštr. objektom"</string>
     <string name="mode_camera_desc" msgid="3670807361165657278">"Prebaci na način rada za kameru"</string>
     <string name="mode_video_desc" msgid="4058407412929464689">"Prebaciti na videokameru"</string>
     <string name="mode_photosphere_desc" msgid="2403816283825579161">"Prebaci na način rada za photo sphere fotografije"</string>
     <string name="mode_panorama_desc" msgid="6023020404237519590">"Prebaci na panoramski način rada"</string>
-    <string name="mode_refocus_desc" msgid="6171183297515508465">"Prebaci na način rada Efekt s izoštrenim objektom"</string>
+    <string name="mode_refocus_desc" msgid="6171183297515508465">"Prebaci na način rada Efekat s izoštrenim objektom"</string>
     <string name="settings_open_desc" msgid="6914471293841793766">"Otvori postavke"</string>
     <string name="settings_close_desc" msgid="3095831199632813127">"Zatvori postavke"</string>
     <string name="hdr_plus_off_desc" msgid="5301287296717144319">"HDR Plus isključen"</string>
