Add advance features in MultiCamera app
-Full Screen view for each camera
-Settings screen for each camera
-Limited resolution settings to QVGA, VGA, HD, FHD, 4K
-Thumbnail for both video & picture capture for Quick Preview
-Recording duration countdown while recording video
-UI modifications
-New Activity to handle Camera Intents
-Duration & size info  in file details
-New Multicamera App Icon

Tracked-on: OAM-88628
Signed-off-by: Nikumbh, Mayur NimbaX <mayur.nimbax.nikumbh@intel.com>
Signed-off-by: Muhammad Aksar <muhammad.aksar@intel.com>

--- a/camera/MultiCameraApplication/res/values/strings.xml
+++ b/camera/MultiCameraApplication/res/values/strings.xml
@@ -47,10 +47,10 @@
     <string name="pref_header_Camera_Capture_Resolution">Capture Resolution</string>
     <string name="pref_header_Camera_Video_Resolution">Video Quality</string>
 
-    <string name="setting_summary_width_and_height"> %1$dx%2$d </string>
+    <string name="setting_summary_width_and_height">%1$dx%2$d</string>
 
     <!-- Multi Preferences -->
-    <string name="pref_header_multi_usb_cam_list">Multi-USB Cameras</string>
+    <string name="pref_header_multi_usb_cam_list">USB Cameras</string>
     <string name="multi_usb_cam_list_default">One</string>
 
     <!-- Video Camera format string for new video files. Passed to java.text.SimpleDateFormat. -->
@@ -64,9 +64,38 @@
     <string name="camera_error_title">Camera error</string>
 
     <!-- message for the dialog showing that the app does not have sufficient permissions [CHAR LIMIT=NONE] -->
-    <string name="error_permissions">The app does not have critical permissions needed to run. Please check your permissions settings.</string>
+    <string name="error_permissions">The app does not have critical permissions needed to run.
+        Please check your permissions settings.
+    </string>
 
     <!-- Dialog "Dismiss" button. Closes the dialog [CHAR LIMIT=12]-->
     <string name="dialog_dismiss">Dismiss</string>
+
+    <!-- Strings for Camera Intents -->
+    <string name="read_me">READ ME</string>
+    <string name="info">
+        1. Use ItsCameraIntentsTest OPTION for testing CAMERA INTENTS \n\n
+        2. For MULTI CAMERA VIEW select 2nd option \n
+    </string>
+
+    <string name="ItsCameraIntentTest">CAMERA INTENTS TEST</string>
+    <string name="MultiCameraView">MULTI CAMERA VIEW</string>
+
+    <!-- Announcement telling users video recording has just started [CHAR LIMIT=NONE] -->
+    <string name="video_recording_started">Video recording has started.</string>
+    <!-- Announcement telling users video recording has just stopped [CHAR LIMIT=NONE] -->
+    <string name="video_recording_stopped">Video recording has stopped.</string>
+
+    <!-- Describes button on top of a video in filmstrip that is a play icon, pressing starts external video player [CHAR LIMIT=NONE] -->
+    <string name="video_control_play">Play Video</string>
+
+    <!-- String indicating an error when playing the video. [CHAR LIMIT=30] -->
+    <string name="video_err">Can\'t play video.</string>
+
+    <!-- Accessibility text for preview delete button [CHAR_LIMIT=NONE] -->
+    <string name="delete_button_description">Delete</string>
+
+
+
 
 </resources>
